--- a/index.html
+++ b/index.html
@@ -90,23 +90,25 @@
           <div class="home-frame">
             <div id="allProjects">
               <div style="height:3vw"></div>
-                          <div id="1.Choistudio">
-                              <span class="home-text">
-                                  <span style="font-family: NailFont;" id="one">Choistudio</span>
-                              </span>
-                              <div id="wrapper" class="comtainer-scroll-img dragscroll">
-                                  <div class="scroll-img">
-                                      <div style="font-family: NailFont;" id="divNotClicable" class="first-in-row"></div>
-                                          <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/01 Элджей.mp4" data-caption="1">
-                                  <img src="img_svg/imgs/pre/1.Choistudio pre/01 Элджей pre.gif" class="img-rectangle1"/>
-                              </a><a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/02 cherep.mp4" data-caption="2">
-                                  <img src="img_svg/imgs/pre/1.Choistudio pre/02 cherep pre.gif" class="img-rectangle2"/>
-                              </a><div class="home-frame71">
-                                  <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/03 crocoboy.png" data-caption="3">
-                                      <img src="img_svg/imgs/pre/1.Choistudio pre/03 crocoboy pre.jpg" class="img-rectangle3"/>
-                                  </a>
-                                  <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/04 cvetok.jpg" data-caption="4">
-                                      <img src="img_svg/imgs/pre/1.Choistudio pre/04 cvetok pre.jpg" class="img-rectangle3"/>
+                <div id="1.Choistudio">
+                  <span class="home-text">
+                    <span style="font-family: NailFont;" id="one">Choistudio</span>
+                  </span>
+                  <div id="wrapper" class="comtainer-scroll-img dragscroll">
+                    <div class="scroll-img">
+                      <div style="font-family: NailFont;" id="divNotClicable" class="first-in-row"></div>
+                        <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/01 Элджей.mp4" data-caption="1">
+                          <img src="img_svg/imgs/pre/1.Choistudio pre/01 Элджей pre.gif" class="img-rectangle1"/>
+                       </a>
+                       <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/02 cherep.mp4" data-caption="2">
+                          <img src="img_svg/imgs/pre/1.Choistudio pre/02 cherep pre.gif" class="img-rectangle2"/>
+                       </a>
+                       <div class="home-frame71">
+                          <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/03 crocoboy.png" data-caption="3">
+                             <img src="img_svg/imgs/pre/1.Choistudio pre/03 crocoboy pre.jpg" class="img-rectangle3"/>
+                          </a>
+                          <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/04 cvetok.jpg" data-caption="4">
+                             <img src="img_svg/imgs/pre/1.Choistudio pre/04 cvetok pre.jpg" class="img-rectangle3"/>
                                   </a>
                               </div><a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/05 clo 1.jpeg" data-caption="5">
                                   <img src="img_svg/imgs/pre/1.Choistudio pre/05 clo 1 pre.jpg" class="img-rectangle4"/>
@@ -725,39 +727,39 @@
                                   <a data-fancybox="gallery64" data-src="img_svg/imgs/allImg/7. Interior and exterior/27.png" data-caption="27">
                                       <img src="img_svg/imgs/pre/7. Interior and exterior pre/27 pre.jpg" class="img-rectangle3"/>
                                   </a>
-                              </div><a data-fancybox="gallery64" data-src="img_svg/imgs/allImg/7. Interior and exterior/28.png" data-caption="28">
-                                  <img src="img_svg/imgs/pre/7. Interior and exterior pre/28 pre.jpg" class="img-rectangle2_1"/>
-                              </a>
-                                      <div class="text_rectangle">
-                                          <span class="home-text18">
-                                              <span class="langRu" style="font-family: 'Montserrat';">
-                                                  Элементы интерьера и экстерьера для студии Романа Власова.
-                                              </span>
-                                              <span class="langEn" >
-                                                  Interior and exterior elements for Roman Vlasov’s studio.
-                                              </span>
-                                          </span>
-                                      </div>
-                                  </div>
-                              </div>
-                          </div><div style="height:3vw"></div>
-                          <div id="two" style="height:100vh" id="AboutMe">
-                              <span class="home-text">
-                                  <span style="font-family: NailFont;" id="one">About Me</span>
-                              </span>
-                              <div class="home-text-aboutMe langRu" style="font-family: 'Montserrat'; font-size: 2.25vw">
-                                  Опыт работы в дизайне 7 лет. Также занимаюсь 3D моделированием. Моими основными инструментами являются:Photoshop, Illustrator, Indesign, Figma, Blender, Cinema 4d, ZBrush, Marvelous, Substance. Умею адаптировать современные нейросетевые команды под софт графического дизайнера. <br>Имею опыт работы с крупными брендами и успешными компаниями в разных отраслях такие как: МТС, Авито, ZNY, Anteater, PLStorage, Liars Collective, Empire of Summer, Zakat Family, VSRap Shop, Four-thirtythree. Умею работать как в команде, так и независимо, быстро адаптироваться к новым требованиям и срокам. <br>Имею развитые коммуникативные навыки, умение убеждать и донести свои идеи до клиента, команды или руководства. <br>Хорошо осведомлен в последних тенденциях дизайна и искусства, а также в технических новинках, нейросетях связанных с дизайном и визуалом.
-                              </div>
-                              <div class="home-text-aboutMe langEn">
-                                  Work experience in design for 8 years. I am also engaged in 3D modeling. My main tools include Photoshop, Illustrator, Indesign, Figma, Blender, Cinema 4d, ZBrush, Marvelous, Substance. I can adapt modern neural network commands to graphic design software. <br>I have experience working with major brands and successful companies in various industries such as MTS, Avito, ZNY, Anteater, PLStorage, Liars Collective, Empire of Summer, Zakat Family, VSRap Shop, Four-thirtythree. <br>I can work both in a team and independently, quickly adapt to new requirements and deadlines. I have developed communication skills, the ability to persuade and convey my ideas to clients, teams, or management. <br>I am well-informed about the latest trends in design and art, as well as technological innovations, neural networks related to design and visuals.
-                              </div>
-                          </div>
+                      </div>
+                      <a data-fancybox="gallery64" data-src="img_svg/imgs/allImg/7. Interior and exterior/28.png" data-caption="28">
+                        <img src="img_svg/imgs/pre/7. Interior and exterior pre/28 pre.jpg" class="img-rectangle2_1"/>
+                      </a>  
+                      <div class="text_rectangle">
+                        <span class="home-text18">
+                          <span class="langRu" style="font-family: 'Montserrat';">
+                            Элементы интерьера и экстерьера для студии Романа Власова.
+                          </span>
+                          <span class="langEn" >
+                            Interior and exterior elements for Roman Vlasov’s studio.
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div><div style="height:3vw"></div>
+                <div id="two" style="height:100vh" id="AboutMe">
+                  <span class="home-text">
+                      <span style="font-family: NailFont;" id="one">About Me</span>
+                  </span>
+                <div class="home-text-aboutMe langRu" style="font-family: 'Montserrat'; font-size: 2.25vw">
+                  Опыт работы в дизайне 7 лет. Также занимаюсь 3D моделированием. Моими основными инструментами являются:Photoshop, Illustrator, Indesign, Figma, Blender, Cinema 4d, ZBrush, Marvelous, Substance. Умею адаптировать современные нейросетевые команды под софт графического дизайнера. <br>Имею опыт работы с крупными брендами и успешными компаниями в разных отраслях такие как: МТС, Авито, ZNY, Anteater, PLStorage, Liars Collective, Empire of Summer, Zakat Family, VSRap Shop, Four-thirtythree. Умею работать как в команде, так и независимо, быстро адаптироваться к новым требованиям и срокам. <br>Имею развитые коммуникативные навыки, умение убеждать и донести свои идеи до клиента, команды или руководства. <br>Хорошо осведомлен в последних тенденциях дизайна и искусства, а также в технических новинках, нейросетях связанных с дизайном и визуалом.
+                </div>
+                <div class="home-text-aboutMe langEn">
+                  Work experience in design for 8 years. I am also engaged in 3D modeling. My main tools include Photoshop, Illustrator, Indesign, Figma, Blender, Cinema 4d, ZBrush, Marvelous, Substance. I can adapt modern neural network commands to graphic design software. <br>I have experience working with major brands and successful companies in various industries such as MTS, Avito, ZNY, Anteater, PLStorage, Liars Collective, Empire of Summer, Zakat Family, VSRap Shop, Four-thirtythree. <br>I can work both in a team and independently, quickly adapt to new requirements and deadlines. I have developed communication skills, the ability to persuade and convey my ideas to clients, teams, or management. <br>I am well-informed about the latest trends in design and art, as well as technological innovations, neural networks related to design and visuals.
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!--<script src="JS/svap.js"></script>-->
     <script src="JS/swaplang.js"></script>
     <script src="JS/buttonToUp.js"></script>
   </body>
