--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                                       <img src="img_svg/imgs/pre/2.Package pre/25.ne pre.jpg" class="img-rectangle3"/>
                                   </a>
                               </div><a data-fancybox="gallery15" data-src="img_svg/imgs/allImg/2.Package/26.kom.gif" data-caption="26">
-                                  <img src="img_svg/imgs/pre/2.Package pre/26.kom pre.gif" class="img-rectangle2"/>
+                                  <img src="img_svg/imgs/pre/2.Package pre/26.kom.gif" class="img-rectangle2"/>
                               </a>
                                       <div class="text_rectangle">
                                           <span class="home-text18">
