--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="CSS/style.css"/>
 
     <!-- The Open Graph START (необходимо для стилизации ссылки на сайт например в мессенджерах) -->
-    <meta property="og:title" content="Сюда надо вставить текст отображаемый при ссылании на данную страницу" />
+    <meta property="og:title" content="Graphic Designer's portfolio" />
     <meta property="og:image" content="img_svg/lable.png"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content="Описание страницы в ссылке"/>
+    <!--<meta property="og:description" content=""/>-->
     <meta property="og:site_name" content="Niles.Lab"/>
     <meta property="og:image:width" content="630"/>
     <meta property="og:image:height" content="630"/>
