--- a/index.html
+++ b/index.html
@@ -44,6 +44,33 @@
       }
     </style>
 
+    <script>
+
+        paths = [
+
+            'ToTheMoon',
+            'Cryptology',
+            'Cheelee v3',
+            'CosmicFomo - Branding guide',
+            'Айтишники v2',
+            'Откровенно с Татаркой',
+            'Cheelee v2',
+            'Cheelee V1',
+            'Дорожные хроники'
+
+        ]
+        
+        function store_path(number_path) {
+
+            //window.location = '/presentations/' + paths[number_path] + '.pdf'
+            //localStorage.setItem('path_to_file', '/presentations/' + paths[number_path] + '.pdf')
+            localStorage.path_to_file = '/presentations/' + paths[number_path] + '.pdf'
+            window.open('presentation.html')
+
+        }
+
+    </script>
+
   </head>
   <body>
     <div class="p-0 m-0" style="max-width: 99vw;">
@@ -90,6 +117,57 @@
           <div class="home-frame">
             <div id="allProjects">
               <div style="height:3vw"></div>
+
+
+
+              <div id="0.Branding">
+                <span class="home-text">
+                    <span style="font-family: NailFont;" id="one">Branding</span>
+                </span>
+                <div id="wrapper" class="comtainer-scroll-img-1 dragscroll">
+                    <div class="scroll-img">
+                        <div style="font-family: NailFont;" id="divNotClicable" class="first-in-row"></div>
+                    <a onclick="store_path(0)" class="img-rectangle00">
+                        <img src="img_svg/imgs/allImg/0.Branding/1.png" class="img-rectangle00"/>
+                    </a>
+                    <a onclick="store_path(2)" class="img-rectangle00">
+                        <img src="img_svg/imgs/allImg/0.Branding/3.png" class="img-rectangle00"/>
+                    </a>
+                    <a onclick="store_path(4)" class="img-rectangle00">
+                        <img src="img_svg/imgs/allImg/0.Branding/5.png" class="img-rectangle00"/>
+                    </a>
+                    <a onclick="store_path(6)" class="img-rectangle00">
+                        <img src="img_svg/imgs/allImg/0.Branding/7.png" class="img-rectangle00"/>
+                    </a>
+                    <a onclick="store_path(8)" class="img-rectangle00">
+                        <img src="img_svg/imgs/allImg/0.Branding/9.png" class="img-rectangle00"/>
+                    </a>
+                    <div id="divNotClicable" class="last-in-row"></div>
+                            </div>
+                        </div>
+                        <div class="comtainer-scroll-img-1 dragscroll">
+                            <div class="scroll-img">
+                                <div id="divNotClicable" class="first-in-row"></div>
+                                <a onclick="store_path(1)" class="img-rectangle00">
+                                    <img src="img_svg/imgs/allImg/0.Branding/2.png" class="img-rectangle00"/>
+                                </a>
+                                <a onclick="store_path(3)" class="img-rectangle00">
+                                    <img src="img_svg/imgs/allImg/0.Branding/4.png" class="img-rectangle00"/>
+                                </a>
+                                <a onclick="store_path(5)" class="img-rectangle00">
+                                    <img src="img_svg/imgs/allImg/0.Branding/6.png" class="img-rectangle00"/>
+                                </a>
+                                <a onclick="store_path(7)" class="img-rectangle00">
+                                    <img src="img_svg/imgs/allImg/0.Branding/8.png" class="img-rectangle00"/>
+                                </a>
+                                <div id="divNotClicable" class="last-in-row"></div>
+                            </div>
+                        </div>
+                    </div>
+            
+
+
+                <div style="height:3vw"></div>
                 <div id="1.Choistudio">
                   <span class="home-text">
                     <span style="font-family: NailFont;" id="one">Choistudio</span>
@@ -143,11 +221,11 @@
                                           <div class="scroll-img">
                                               <div id="divNotClicable" class="first-in-row"></div><a data-fancybox="gallery2" data-src="img_svg/imgs/allImg/1.Choistudio/13 50-50 5 pre.jpg" data-caption="14">
                                   <img src="img_svg/imgs/pre/1.Choistudio pre/13 50-50 5 pre.jpg" class="img-rectangle2"/>
-                              </a><a data-fancybox="gallery2" data-src="img_svg/imgs/allImg/1.Choistudio/14 Glass 1.jpg" data-caption="15">
+                              </a><!--<a data-fancybox="gallery2" data-src="img_svg/imgs/allImg/1.Choistudio/14 Glass 1.jpg" data-caption="15">
                                   <img src="img_svg/imgs/pre/1.Choistudio pre/14 Glass 1 pre.jpg" class="img-rectangle4"/>
                               </a><a data-fancybox="gallery2" data-src="img_svg/imgs/allImg/1.Choistudio/15 Glass 2.jpg" data-caption="16">
                                   <img src="img_svg/imgs/pre/1.Choistudio pre/15 Glass 2 pre.jpg" class="img-rectangle1"/>
-                              </a><div class="home-frame71">
+                              </a>--><div class="home-frame71">
                                   <a data-fancybox="gallery2" data-src="img_svg/imgs/allImg/1.Choistudio/16 Glass 3.png" data-caption="17">
                                       <img src="img_svg/imgs/pre/1.Choistudio pre/16 Glass 3 pre.jpg" class="img-rectangle3"/>
                                   </a>
@@ -206,7 +284,7 @@
                           </div><div style="height:3vw"></div>
                               <div id="8. Manki Panki">
                                   <span class="home-text">
-                                      <span style="font-family: NailFont;" id="one"> Manki Panki</span>
+                                      <span style="font-family: NailFont;" id="one">Manki Panki</span>
                                   </span>
                                   <div id="wrapper" class="comtainer-scroll-img dragscroll">
                                       <div class="scroll-img">
