--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
                   <a style="font-family: NailFont;" href="#two">About me</a>
                 </span>
               </div>
-                <div class="textNavigationIn" style="gap:0">
-                  <img id="langRuButton" src="img_svg/circle.svg" style="top: 0.5vw; left: -0.35vw; width: 4vw; height: 4vw; position: absolute; z-index: 0; object-fit: contain">
-                  <span style="z-index: 10; position:absolute; top: 0.5vw">
-                    <button style="z-index: 10; font-family: NailFont;" id="langRu">RU</button>
-                  </span>
-                  <img id="langEnButton" src="img_svg/circle.svg" style="top: 4.3vw; left: -0.35vw; width: 4vw; height: 4vw; position: absolute; z-index: 0; object-fit: contain">
-                  <span style="z-index: 10;  position:absolute;  bottom: 0.5vw">
-                    <button style="z-index: 100; font-family: NailFont;" id="langEn">EN</button>
-                  </span>
-                </div>
+              <div class="textNavigationIn" style="gap:0">
+                <img id="langRuButton" src="img_svg/circle.svg" style="top: 0.5vw; left: -0.35vw; width: 4vw; height: 4vw; position: absolute; z-index: 0; object-fit: contain">
+                <span style="z-index: 10; position:absolute; top: 0.5vw">
+                  <button style="z-index: 10; font-family: NailFont;" id="langRu">RU</button>
+                </span>
+                <img id="langEnButton" src="img_svg/circle.svg" style="top: 4.3vw; left: -0.35vw; width: 4vw; height: 4vw; position: absolute; z-index: 0; object-fit: contain">
+                <span style="z-index: 10;  position:absolute;  bottom: 0.5vw">
+                  <button style="z-index: 100; font-family: NailFont;" id="langEn">EN</button>
+                </span>
+              </div>
             </div>
           </div>
         </div>
@@ -117,100 +117,102 @@
           <div class="home-frame">
             <div id="allProjects">
               <div style="height:3vw"></div>
-
-
-
               <div id="0.Branding">
                 <span class="home-text">
-                    <span style="font-family: NailFont;" id="one">Branding</span>
+                  <span style="font-family: NailFont;" id="one">Branding</span>
                 </span>
                 <div id="wrapper" class="comtainer-scroll-img-1 dragscroll">
-                    <div class="scroll-img">
-                        <div style="font-family: NailFont;" id="divNotClicable" class="first-in-row"></div>
+                  <div class="scroll-img">
+                    <div style="font-family: NailFont;" id="divNotClicable" class="first-in-row"></div>
                     <a onclick="store_path(0)" class="img-rectangle00">
-                        <img src="img_svg/imgs/allImg/0.Branding/1.png" class="img-rectangle00"/>
+                      <img src="img_svg/imgs/allImg/0.Branding/1.png" class="img-rectangle00"/>
                     </a>
                     <a onclick="store_path(2)" class="img-rectangle00">
-                        <img src="img_svg/imgs/allImg/0.Branding/3.png" class="img-rectangle00"/>
+                      <img src="img_svg/imgs/allImg/0.Branding/3.png" class="img-rectangle00"/>
                     </a>
                     <a onclick="store_path(4)" class="img-rectangle00">
-                        <img src="img_svg/imgs/allImg/0.Branding/5.png" class="img-rectangle00"/>
+                      <img src="img_svg/imgs/allImg/0.Branding/5.png" class="img-rectangle00"/>
                     </a>
                     <a onclick="store_path(6)" class="img-rectangle00">
-                        <img src="img_svg/imgs/allImg/0.Branding/7.png" class="img-rectangle00"/>
+                      <img src="img_svg/imgs/allImg/0.Branding/7.png" class="img-rectangle00"/>
                     </a>
                     <a onclick="store_path(8)" class="img-rectangle00">
-                        <img src="img_svg/imgs/allImg/0.Branding/9.png" class="img-rectangle00"/>
+                      <img src="img_svg/imgs/allImg/0.Branding/9.png" class="img-rectangle00"/>
                     </a>
                     <div id="divNotClicable" class="last-in-row"></div>
-                            </div>
-                        </div>
-                        <div class="comtainer-scroll-img-1 dragscroll">
-                            <div class="scroll-img">
-                                <div id="divNotClicable" class="first-in-row"></div>
-                                <a onclick="store_path(1)" class="img-rectangle00">
-                                    <img src="img_svg/imgs/allImg/0.Branding/2.png" class="img-rectangle00"/>
-                                </a>
-                                <a onclick="store_path(3)" class="img-rectangle00">
-                                    <img src="img_svg/imgs/allImg/0.Branding/4.png" class="img-rectangle00"/>
-                                </a>
-                                <a onclick="store_path(5)" class="img-rectangle00">
-                                    <img src="img_svg/imgs/allImg/0.Branding/6.png" class="img-rectangle00"/>
-                                </a>
-                                <a onclick="store_path(7)" class="img-rectangle00">
-                                    <img src="img_svg/imgs/allImg/0.Branding/8.png" class="img-rectangle00"/>
-                                </a>
-                                <div id="divNotClicable" class="last-in-row"></div>
-                            </div>
-                        </div>
+                  </div>
+                </div>
+                <div class="comtainer-scroll-img-1 dragscroll">
+                  <div class="scroll-img">
+                    <div id="divNotClicable" class="first-in-row"></div>
+                    <a onclick="store_path(1)" class="img-rectangle00">
+                      <img src="img_svg/imgs/allImg/0.Branding/2.png" class="img-rectangle00"/>
+                    </a>
+                    <a onclick="store_path(3)" class="img-rectangle00">
+                      <img src="img_svg/imgs/allImg/0.Branding/4.png" class="img-rectangle00"/>
+                    </a>
+                    <a onclick="store_path(5)" class="img-rectangle00">
+                      <img src="img_svg/imgs/allImg/0.Branding/6.png" class="img-rectangle00"/>
+                    </a>
+                    <a onclick="store_path(7)" class="img-rectangle00">
+                      <img src="img_svg/imgs/allImg/0.Branding/8.png" class="img-rectangle00"/>
+                    </a>
+                    <div id="divNotClicable" class="last-in-row"></div>
+                  </div>
+                </div>
+              </div>
+              <div style="height:3vw"></div>
+              <div id="1.Choistudio">
+                <span class="home-text">
+                  <span style="font-family: NailFont;" id="one">Choistudio</span>
+                </span>
+                <div id="wrapper" class="comtainer-scroll-img dragscroll">
+                  <div class="scroll-img">
+                    <div style="font-family: NailFont;" id="divNotClicable" class="first-in-row"></div>
+                    <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/01 Элджей.mp4" data-caption="1">
+                      <img src="img_svg/imgs/pre/1.Choistudio pre/01 Элджей pre.gif" class="img-rectangle1"/>
+                    </a>
+                    <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/02 cherep.mp4" data-caption="2">
+                      <img src="img_svg/imgs/pre/1.Choistudio pre/02 cherep pre.gif" class="img-rectangle2"/>
+                    </a>
+                    <div class="home-frame71">
+                      <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/03 crocoboy.png" data-caption="3">
+                        <img src="img_svg/imgs/pre/1.Choistudio pre/03 crocoboy pre.jpg" class="img-rectangle3"/>
+                      </a>
+                      <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/04 cvetok.jpg" data-caption="4">
+                        <img src="img_svg/imgs/pre/1.Choistudio pre/04 cvetok pre.jpg" class="img-rectangle3"/>
+                      </a>
                     </div>
-            
-
-
-                <div style="height:3vw"></div>
-                <div id="1.Choistudio">
-                  <span class="home-text">
-                    <span style="font-family: NailFont;" id="one">Choistudio</span>
-                  </span>
-                  <div id="wrapper" class="comtainer-scroll-img dragscroll">
-                    <div class="scroll-img">
-                      <div style="font-family: NailFont;" id="divNotClicable" class="first-in-row"></div>
-                        <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/01 Элджей.mp4" data-caption="1">
-                          <img src="img_svg/imgs/pre/1.Choistudio pre/01 Элджей pre.gif" class="img-rectangle1"/>
-                       </a>
-                       <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/02 cherep.mp4" data-caption="2">
-                          <img src="img_svg/imgs/pre/1.Choistudio pre/02 cherep pre.gif" class="img-rectangle2"/>
-                       </a>
-                       <div class="home-frame71">
-                          <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/03 crocoboy.png" data-caption="3">
-                             <img src="img_svg/imgs/pre/1.Choistudio pre/03 crocoboy pre.jpg" class="img-rectangle3"/>
-                          </a>
-                          <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/04 cvetok.jpg" data-caption="4">
-                             <img src="img_svg/imgs/pre/1.Choistudio pre/04 cvetok pre.jpg" class="img-rectangle3"/>
-                                  </a>
-                              </div><a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/05 clo 1.jpeg" data-caption="5">
-                                  <img src="img_svg/imgs/pre/1.Choistudio pre/05 clo 1 pre.jpg" class="img-rectangle4"/>
-                              </a><a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/06 clo 2.jpg" data-caption="6">
-                                  <img src="img_svg/imgs/pre/1.Choistudio pre/06 clo 2 pre.jpg" class="img-rectangle1"/>
-                              </a><a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/28 Zbrush.jpeg" data-caption="7">
-                                  <img src="img_svg/imgs/pre/1.Choistudio pre/28 Zbrush pre.jpeg" class="img-rectangle2"/>
-                              </a><div id="divNotClicable" class="last-in-row"></div>
-                                          </div>
-                                      </div>
-                                      <div class="comtainer-scroll-img dragscroll">
-                                          <div class="scroll-img">
-                                              <div id="divNotClicable" class="first-in-row"></div><div class="home-frame71">
-                                  <a data-fancybox="gallery1" data-src="img_svg/imgs/allImg/1.Choistudio/07 clo 3.jpg" data-caption="8">
-                                      <img src="img_svg/imgs/pre/1.Choistudio pre/07 clo 3 pre.jpg" class="img-rectangle3"/>
-                                  </a>
-                                  <a data-fancybox="gallery1" data-src="img_svg/imgs/allImg/1.Choistudio/08 clo 5.jpeg" data-caption="9">
-                                      <img src="img_svg/imgs/pre/1.Choistudio pre/08 clo 5 pre.jpg" class="img-rectangle3"/>
-                                  </a>
-                              </div><a data-fancybox="gallery1" data-src="img_svg/imgs/allImg/1.Choistudio/09 cyberpunk.mp4" data-caption="10">
-                                  <img src="img_svg/imgs/pre/1.Choistudio pre/09 cyberpunk pre.gif" class="img-rectangle2"/>
-                              </a><a data-fancybox="gallery1" data-src="img_svg/imgs/allImg/1.Choistudio/10 50-50 1.jpg" data-caption="11">
-                                  <img src="img_svg/imgs/pre/1.Choistudio pre/10 50-50 1 pre.jpg" class="img-rectangle1"/>
-                              </a><a data-fancybox="gallery1" data-src="img_svg/imgs/allImg/1.Choistudio/11 50-50 2.jpg" data-caption="12">
+                    <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/05 clo 1.jpeg" data-caption="5">
+                      <img src="img_svg/imgs/pre/1.Choistudio pre/05 clo 1 pre.jpg" class="img-rectangle4"/>
+                    </a>
+                    <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/06 clo 2.jpg" data-caption="6">
+                      <img src="img_svg/imgs/pre/1.Choistudio pre/06 clo 2 pre.jpg" class="img-rectangle1"/>
+                    </a>
+                    <a data-fancybox="gallery0" data-src="img_svg/imgs/allImg/1.Choistudio/28 Zbrush.jpeg" data-caption="7">
+                      <img src="img_svg/imgs/pre/1.Choistudio pre/28 Zbrush pre.jpeg" class="img-rectangle2"/>
+                    </a>
+                    <div id="divNotClicable" class="last-in-row"></div>
+                  </div>
+                </div>
+                <div class="comtainer-scroll-img dragscroll">
+                  <div class="scroll-img">
+                    <div id="divNotClicable" class="first-in-row"></div>
+                    <div class="home-frame71">
+                      <a data-fancybox="gallery1" data-src="img_svg/imgs/allImg/1.Choistudio/07 clo 3.jpg" data-caption="8">
+                        <img src="img_svg/imgs/pre/1.Choistudio pre/07 clo 3 pre.jpg" class="img-rectangle3"/>
+                      </a>
+                      <a data-fancybox="gallery1" data-src="img_svg/imgs/allImg/1.Choistudio/08 clo 5.jpeg" data-caption="9">
+                        <img src="img_svg/imgs/pre/1.Choistudio pre/08 clo 5 pre.jpg" class="img-rectangle3"/>
+                      </a>
+                    </div>
+                    <a data-fancybox="gallery1" data-src="img_svg/imgs/allImg/1.Choistudio/09 cyberpunk.mp4" data-caption="10">
+                      <img src="img_svg/imgs/pre/1.Choistudio pre/09 cyberpunk pre.gif" class="img-rectangle2"/>
+                    </a>
+                    <a data-fancybox="gallery1" data-src="img_svg/imgs/allImg/1.Choistudio/10 50-50 1.jpg" data-caption="11">
+                      <img src="img_svg/imgs/pre/1.Choistudio pre/10 50-50 1 pre.jpg" class="img-rectangle1"/>
+                    </a>
+                    <a data-fancybox="gallery1" data-src="img_svg/imgs/allImg/1.Choistudio/11 50-50 2.jpg" data-caption="12">
                                   <img src="img_svg/imgs/pre/1.Choistudio pre/11 50-50 2 pre.jpg" class="img-rectangle4"/>
                               </a><a data-fancybox="gallery1" data-src="img_svg/imgs/allImg/1.Choistudio/12 50-50 3.png" data-caption="13">
                                   <img src="img_svg/imgs/pre/1.Choistudio pre/12 50-50 3 pre.jpg" class="img-rectangle2"/>
