--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
             'ToTheMoon',
             'Cryptology',
-            'Cheelee v3',
-            'CosmicFomo - Branding guide',
-            'Айтишники v2',
-            'Откровенно с Татаркой',
-            'Cheelee v2',
-            'Cheelee V1',
-            'Дорожные хроники'
+            'Cheeleev3',
+            'CosmicFomo-Brandingguide',
+            'Айтишникиv2',
+            'ОткровенносТатаркой',
+            'Cheeleev2',
+            'Cheeleev1',
+            'Дорожныехроники'
 
         ]
         
