--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             //window.location = '/presentations/' + paths[number_path] + '.pdf'
             //localStorage.setItem('path_to_file', '/presentations/' + paths[number_path] + '.pdf')
-            localStorage.path_to_file = '/presentations/' + paths[number_path] + '.pdf'
+            localStorage.path_to_file = 'presentations/' + paths[number_path] + '.pdf'
             window.open('presentation.html')
 
         }
