--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <script>
 
         paths = [
-
+            'Promminer Branding',
             'ToTheMoon',
             'Cryptology',
             'Cheeleev3',
@@ -125,18 +125,21 @@
                   <div class="scroll-img">
                     <div style="font-family: NailFont;" id="divNotClicable" class="first-in-row"></div>
                     <a onclick="store_path(0)" class="img-rectangle00">
+                      <img src="img_svg/imgs/allImg/0.Branding/0.png" class="img-rectangle00"/>
+                    </a>
+                    <a onclick="store_path(1)" class="img-rectangle00">
                       <img src="img_svg/imgs/allImg/0.Branding/1.png" class="img-rectangle00"/>
                     </a>
-                    <a onclick="store_path(2)" class="img-rectangle00">
+                    <a onclick="store_path(3)" class="img-rectangle00">
                       <img src="img_svg/imgs/allImg/0.Branding/3.png" class="img-rectangle00"/>
                     </a>
-                    <a onclick="store_path(4)" class="img-rectangle00">
+                    <a onclick="store_path(5)" class="img-rectangle00">
                       <img src="img_svg/imgs/allImg/0.Branding/5.png" class="img-rectangle00"/>
                     </a>
-                    <a onclick="store_path(6)" class="img-rectangle00">
+                    <a onclick="store_path(7)" class="img-rectangle00">
                       <img src="img_svg/imgs/allImg/0.Branding/7.png" class="img-rectangle00"/>
                     </a>
-                    <a onclick="store_path(8)" class="img-rectangle00">
+                    <a onclick="store_path(9)" class="img-rectangle00">
                       <img src="img_svg/imgs/allImg/0.Branding/9.png" class="img-rectangle00"/>
                     </a>
                     <div id="divNotClicable" class="last-in-row"></div>
@@ -145,16 +148,16 @@
                 <div class="comtainer-scroll-img-1 dragscroll">
                   <div class="scroll-img">
                     <div id="divNotClicable" class="first-in-row"></div>
-                    <a onclick="store_path(1)" class="img-rectangle00">
+                    <a onclick="store_path(2)" class="img-rectangle00">
                       <img src="img_svg/imgs/allImg/0.Branding/2.png" class="img-rectangle00"/>
                     </a>
-                    <a onclick="store_path(3)" class="img-rectangle00">
+                    <a onclick="store_path(4)" class="img-rectangle00">
                       <img src="img_svg/imgs/allImg/0.Branding/4.png" class="img-rectangle00"/>
                     </a>
-                    <a onclick="store_path(5)" class="img-rectangle00">
+                    <a onclick="store_path(6)" class="img-rectangle00">
                       <img src="img_svg/imgs/allImg/0.Branding/6.png" class="img-rectangle00"/>
                     </a>
-                    <a onclick="store_path(7)" class="img-rectangle00">
+                    <a onclick="store_path(8)" class="img-rectangle00">
                       <img src="img_svg/imgs/allImg/0.Branding/8.png" class="img-rectangle00"/>
                     </a>
                     <div id="divNotClicable" class="last-in-row"></div>
